# primeCheck

./: CMakeLists.txt  README
src/: CMakeLists.txt  main.cpp
src/atkin/: CMakeLists.txt  atkin.cpp  atkin.hpp  atkinthreaded.cpp  atkinthreaded.hpp  atkinthreadedatomic.cpp  atkinthreadedatomic.hpp  atkinthreadedvar2.cpp  atkinthreadedvar2.hpp
src/base/: CMakeLists.txt  basePrime.cpp  basePrime.hpp
src/eratosthenes/: CMakeLists.txt  eratosthenes.cpp  eratosthenes.hpp
src/miller-rabin/: CMakeLists.txt  millerRabinBase.cpp  millerRabinParallelBase.cpp  millerrabin.cpp  millerrabin.hpp  millerrabinParallelBase.cpp  millerrabinParallelBase.hpp
src/millerRabin/: CMakeLists.txt  millerRabin.cpp  millerRabin.hpp  millerRabinBase.cpp  millerRabinBase.hpp  millerRabinParallelBase.cpp  millerRabinParallelBases.cpp  millerRabinParallelBases.hpp  millerRabinParallelPrimes.cpp  millerRabinParallelPrimes.hpp  millerrabinWorker.hpp
