CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (PrimeCheck CXX)

SET (CMAKE_CXX_COMPILER "g++")
SET (CMAKE_CXX_FLAGS "-Wall -Wextra -Weffc++ -std=c++0x -O2")

SET (EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")

MESSAGE (STATUS "EXECUTABLE_OUTPUT_PATH:   " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE (STATUS "CMAKE_SOURCE_DIR:         " ${CMAKE_SOURCE_DIR})
MESSAGE (STATUS "CMAKE_BINARY_DIR:         " ${CMAKE_BINARY_DIR})

MESSAGE (STATUS "CMAKE_SYSTEM:             " ${CMAKE_SYSTEM}) 

ADD_SUBDIRECTORY (src)
